Header + affichage principal

--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JustStreamIt</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
+
+    <header>
+        <h2>JustStreamIt</h2>
+        <div class="menu">
+            <p>Accueil</p>
+            <p>Catégories</p>
+        </div>
+    </header>
+
+    <div class="best_movie" id="best_movie_img"></div>
 
 </body>
 
