--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JustStreamIt</title>
     <link rel="stylesheet" href="styles/index.css">
+    <script src="scripts/index.js"></script>
 </head>
 
 <body>
