--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
 
     <div class="best_movie" id="best_movie_img"></div>
 
+    <div class="carousel-container">
+        <div class="carousel-nav-left"></div>
+        <div class="carousel-images">
+            <img class="carousel-image" src="image1.jpg">
+            <img class="carousel-image" src="image2.jpg">
+            <img class="carousel-image" src="image3.jpg">
+            <img class="carousel-image" src="image4.jpg">
+            <img class="carousel-image" src="image5.jpg">
+            <img class="carousel-image" src="image6.jpg">
+            <img class="carousel-image" src="image7.jpg">
+        </div>
+        <div class="carousel-nav-right"></div>
+    </div>
+
+
 </body>
 
 </html>
