Carousel : affichage des 4 premières images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JustStreamIt</title>
     <link rel="stylesheet" href="styles/index.css">
-    <script src="scripts/index.js"></script>
+    <script src="scripts/index.js" async></script>
 </head>
 
 <body>
@@ -21,18 +21,25 @@
 
     <div class="best_movie" id="best_movie_img"></div>
 
-    <div class="carousel-container">
-        <div class="carousel-nav-left"></div>
-        <div class="carousel-images">
-            <img class="carousel-image" src="image1.jpg">
-            <img class="carousel-image" src="image2.jpg">
-            <img class="carousel-image" src="image3.jpg">
-            <img class="carousel-image" src="image4.jpg">
-            <img class="carousel-image" src="image5.jpg">
-            <img class="carousel-image" src="image6.jpg">
-            <img class="carousel-image" src="image7.jpg">
+    <div class="best_notes">
+        <h3>Films les mieux notés</h3>
+        <div class="carousel-container">
+            <div class="carousel-nav-left">
+                <img src="3test.png">
+            </div>
+            <div class="carousel-images">
+                <img class="carousel-image" src="1test.jpg">
+                <img class="carousel-image" src="2test.jpg">
+                <img class="carousel-image" src="3test.jpg">
+                <img class="carousel-image" src="4test.jpg">
+                <img class="carousel-image" src="5test.jpg">
+                <img class="carousel-image" src="6test.jpg">
+                <img class="carousel-image" src="7test.jpg">
+            </div>
+            <div class="carousel-nav-right">
+                <img src="2test.png">
+            </div>
         </div>
-        <div class="carousel-nav-right"></div>
     </div>
 
 
