--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
                 <img src="3test.png">
             </div>
             <div class="carousel-images">
-                <img class="carousel-image" src="1test.jpg">
-                <img class="carousel-image" src="2test.jpg">
-                <img class="carousel-image" src="3test.jpg">
-                <img class="carousel-image" src="4test.jpg">
-                <img class="carousel-image" src="5test.jpg">
-                <img class="carousel-image" src="6test.jpg">
-                <img class="carousel-image" src="7test.jpg">
+                <div class="carousel_img" id="best_img_1"></div>
+                <div class="carousel_img" id="best_img_2"></div>
+                <div class="carousel_img" id="best_img_3"></div>
+                <div class="carousel_img" id="best_img_4"></div>
             </div>
             <div class="carousel-nav-right">
                 <img src="2test.png">
