--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="best_notes">
         <h3>Films les mieux notés</h3>
         <div class="carousel-container">
-            <div class="carousel-nav-left">
+            <div class="best-nav-left">
                 <img src="3test.png">
             </div>
             <div class="carousel-images">
@@ -33,7 +33,66 @@
                 <div class="carousel_img" id="best_img_3"></div>
                 <div class="carousel_img" id="best_img_4"></div>
             </div>
-            <div class="carousel-nav-right">
+            <div class="best-nav-right">
+                <img src="2test.png">
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="best_notes">
+        <h3>Action</h3>
+        <div class="carousel-container">
+            <div class="cat1-nav-left">
+                <img src="3test.png">
+            </div>
+            <div class="carousel-images">
+                <div class="carousel_img" id="Action_img_1"></div>
+                <div class="carousel_img" id="Action_img_2"></div>
+                <div class="carousel_img" id="Action_img_3"></div>
+                <div class="carousel_img" id="Action_img_4"></div>
+            </div>
+            <div class="cat1-nav-right">
+                <img src="2test.png">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="best_notes">
+        <h3>Comedy</h3>
+        <div class="carousel-container">
+            <div class="cat2-nav-left">
+                <img src="3test.png">
+            </div>
+            <div class="carousel-images">
+                <div class="carousel_img" id="Comedy_img_1"></div>
+                <div class="carousel_img" id="Comedy_img_2"></div>
+                <div class="carousel_img" id="Comedy_img_3"></div>
+                <div class="carousel_img" id="Comedy_img_4"></div>
+            </div>
+            <div class="cat2-nav-right">
+                <img src="2test.png">
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="best_notes">
+        <h3>Sci-Fi</h3>
+        <div class="carousel-container">
+            <div class="cat3-nav-left">
+                <img src="3test.png">
+            </div>
+            <div class="carousel-images">
+                <div class="carousel_img" id="Sci-Fi_img_1"></div>
+                <div class="carousel_img" id="Sci-Fi_img_2"></div>
+                <div class="carousel_img" id="Sci-Fi_img_3"></div>
+                <div class="carousel_img" id="Sci-Fi_img_4"></div>
+            </div>
+            <div class="cat3-nav-right">
                 <img src="2test.png">
             </div>
         </div>
