Conception globale de la modale

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
 
-    <div class="best_notes">
+    <div class="best_notes">office
         <h3>Sci-Fi</h3>
         <div class="carousel-container">
             <div class="cat3-nav-left">
@@ -97,6 +97,30 @@
             </div>
         </div>
     </div>
+
+    <button id="openModalBtn">Ouvrir la fiche du film</button>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2 class="title">Titre du film</h2>
+            <img class="poster"
+                src="https://i.etsystatic.com/34708433/r/il/f22265/4310001898/il_fullxfull.4310001898_5i08.jpg"
+                alt="Affiche du film">
+            <p class="description">Description du film...</p>
+            <p class="genre">Genres : Genre 1, Genre 2</p>
+            <p class="duration">Durée : 1h30</p>
+            <p class="rating">Note : 8.5/10</p>
+            <p class="imdb_score">Score imdb</p>
+            <p class="release_date">Date de sortie</p>
+            <p class="actors">Acteurs principaux : Acteur 1, Acteur 2</p>
+            <p class="director">Réalisateur : Nom du réalisateur</p>
+            <p class="box_office">Résultats au box office</p>
+            <p class="origin">Pays d'origine : </p>
+
+        </div>
+    </div>
+
+
 
 
 </body>
