--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 
 
 
-    <!-- <div class="best_notes">
-        <h3>Action</h3>
+    <div class="best_notes">
+        <h3 class="cat1_title"></h3>
         <div class="carousel-container">
             <div class="cat1-nav-left">
                 <img src="3test.png">
             </div>
             <div class="carousel-images">
-                <div class="carousel_img" id="Action_img_1"></div>
-                <div class="carousel_img" id="Action_img_2"></div>
-                <div class="carousel_img" id="Action_img_3"></div>
-                <div class="carousel_img" id="Action_img_4"></div>
+                <div class="carousel_img" id="cat1_img_1"></div>
+                <div class="carousel_img" id="cat1_img_2"></div>
+                <div class="carousel_img" id="cat1_img_3"></div>
+                <div class="carousel_img" id="cat1_img_4"></div>
             </div>
             <div class="cat1-nav-right">
                 <img src="2test.png">
@@ -61,16 +61,16 @@
 
 
     <div class="best_notes">
-        <h3>Comedy</h3>
+        <h3 class="cat2_title"></h3>
         <div class="carousel-container">
             <div class="cat2-nav-left">
                 <img src="3test.png">
             </div>
             <div class="carousel-images">
-                <div class="carousel_img" id="Comedy_img_1"></div>
-                <div class="carousel_img" id="Comedy_img_2"></div>
-                <div class="carousel_img" id="Comedy_img_3"></div>
-                <div class="carousel_img" id="Comedy_img_4"></div>
+                <div class="carousel_img" id="cat2_img_1"></div>
+                <div class="carousel_img" id="cat2_img_2"></div>
+                <div class="carousel_img" id="cat2_img_3"></div>
+                <div class="carousel_img" id="cat2_img_4"></div>
             </div>
             <div class="cat2-nav-right">
                 <img src="2test.png">
@@ -80,23 +80,23 @@
 
 
 
-    <div class="best_notes">office
-        <h3>Sci-Fi</h3>
+    <div class="best_notes">
+        <h3 class="cat3_title"></h3>
         <div class="carousel-container">
             <div class="cat3-nav-left">
                 <img src="3test.png">
             </div>
             <div class="carousel-images">
-                <div class="carousel_img" id="Sci-Fi_img_1"></div>
-                <div class="carousel_img" id="Sci-Fi_img_2"></div>
-                <div class="carousel_img" id="Sci-Fi_img_3"></div>
-                <div class="carousel_img" id="Sci-Fi_img_4"></div>
+                <div class="carousel_img" id="cat3_img_1"></div>
+                <div class="carousel_img" id="cat3_img_2"></div>
+                <div class="carousel_img" id="cat3_img_3"></div>
+                <div class="carousel_img" id="cat3_img_4"></div>
             </div>
             <div class="cat3-nav-right">
                 <img src="2test.png">
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- <button id="openModalBtn">Ouvrir la fiche du film</button> -->
     <div id="modal" class="modal">
