Corrections affichage Best Notes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
         </div>
     </header>
 
-    <div class="best_movie" id="best_movie_img"></div>
+    <div class="main_movie">
+        <div class="main_movie_container">
+            <div class="best_movie" id="best_movie_img">
+
+            </div>
+            <div class="best_movie_datas">
+                <p>Titre</p>
+                <p>Résumé</p>
+                <button>Bouton</button>
+            </div>
+        </div>
+    </div>
 
     <div class="best_notes">
         <h3>Films les mieux notés</h3>
@@ -28,10 +39,10 @@
                 <img src="3test.png">
             </div>
             <div class="carousel-images">
-                <div class="carousel_img" id="best_img_1"></div>
-                <div class="carousel_img" id="best_img_2"></div>
-                <div class="carousel_img" id="best_img_3"></div>
-                <div class="carousel_img" id="best_img_4"></div>
+                <div class="carousel_img" id="catI_img_1"></div>
+                <div class="carousel_img" id="catI_img_2"></div>
+                <div class="carousel_img" id="catI_img_3"></div>
+                <div class="carousel_img" id="catI_img_4"></div>
             </div>
             <div class="best-nav-right">
                 <img src="2test.png">
@@ -112,7 +123,7 @@
             <p class="release_date"></p>
             <p class="actors"></p>
             <p class="director"></p>
-            <p class="box_office">Résultats au box office</p>
+            <p class="box_office"></p>
             <p class="origin"></p>
 
         </div>
