Affichage du film star

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
             </div>
             <div class="best_movie_datas">
-                <p>Titre</p>
-                <p>Résumé</p>
-                <button>Bouton</button>
+                <p class="star_movie_title">Titre</p>
+                <p class="star_movie_resume">Résumé</p>
+                <button>Plus d'infos</button>
             </div>
         </div>
     </div>
