Mise en conformité pour W3C validator

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3>Films les mieux notés</h3>
         <div class="carousel-container">
             <div class="best-nav-left">
-                <img src="3test.png">
+                <img src="3test.png" alt="black left arrow on white background">
             </div>
             <div class="carousel-images">
                 <div class="carousel_img" id="catI_img_1"></div>
@@ -45,7 +45,7 @@
                 <div class="carousel_img" id="catI_img_4"></div>
             </div>
             <div class="best-nav-right">
-                <img src="2test.png">
+                <img src="2test.png" alt="black right arrow on white background">
             </div>
         </div>
     </div>
@@ -53,10 +53,10 @@
 
 
     <div class="best_notes">
-        <h3 class="cat1_title"></h3>
+        <h3 class="cat1_title"> Contenu généré dynamiquement </h3>
         <div class="carousel-container">
             <div class="cat1-nav-left">
-                <img src="3test.png">
+                <img src="3test.png" alt="black left arrow on white background">
             </div>
             <div class="carousel-images">
                 <div class="carousel_img" id="cat1_img_1"></div>
@@ -65,17 +65,17 @@
                 <div class="carousel_img" id="cat1_img_4"></div>
             </div>
             <div class="cat1-nav-right">
-                <img src="2test.png">
+                <img src="2test.png" alt="black right arrow on white background">
             </div>
         </div>
     </div>
 
 
     <div class="best_notes">
-        <h3 class="cat2_title"></h3>
+        <h3 class="cat2_title"> Contenu généré dynamiquement </h3>
         <div class="carousel-container">
             <div class="cat2-nav-left">
-                <img src="3test.png">
+                <img src="3test.png" alt="black left arrow on white background">
             </div>
             <div class="carousel-images">
                 <div class="carousel_img" id="cat2_img_1"></div>
@@ -84,7 +84,7 @@
                 <div class="carousel_img" id="cat2_img_4"></div>
             </div>
             <div class="cat2-nav-right">
-                <img src="2test.png">
+                <img src="2test.png" alt="black right arrow on white background">
             </div>
         </div>
     </div>
@@ -92,10 +92,10 @@
 
 
     <div class="best_notes">
-        <h3 class="cat3_title"></h3>
+        <h3 class="cat3_title"> Contenu généré dynamiquement </h3>
         <div class="carousel-container">
             <div class="cat3-nav-left">
-                <img src="3test.png">
+                <img src="3test.png" alt="black left arrow on white background">
             </div>
             <div class="carousel-images">
                 <div class="carousel_img" id="cat3_img_1"></div>
@@ -104,7 +104,7 @@
                 <div class="carousel_img" id="cat3_img_4"></div>
             </div>
             <div class="cat3-nav-right">
-                <img src="2test.png">
+                <img src="2test.png" alt="black right arrow on white background">
             </div>
         </div>
     </div>
@@ -113,8 +113,8 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2 class="modal_title"></h2>
-            <img class="poster" src="" alt="Affiche du film" id="poster">
+            <h2 class="modal_title">Contenu généré dynamiquement </h2>
+            <img class="poster" src="." alt="Affiche du film" id="poster">
             <p class="description"></p>
             <p class="genre"></p>
             <p class="duration"></p>
