Modale du film star

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="best_movie_datas">
                 <p class="star_movie_title">Titre</p>
                 <p class="star_movie_resume">Résumé</p>
-                <button class="star_movie_button">Plus d'infos</button>
+                <button class="star_movie_button" id="star_movie">Plus d'infos</button>
             </div>
         </div>
     </div>
